Prepared data for model

--- a/Housing.ipynb
+++ b/Housing.ipynb
@@ -1034,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "12250995",
+   "id": "d7cb0098",
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "69c51a68",
+   "id": "6ce4f595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "115ad983",
+   "id": "76a17ed9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,8 +1105,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "id": "c1a28ff3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "class DataFrameSelector(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, attribute_names):\n",
+    "        self.attribute_names = attribute_names\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    def transform(self, X):\n",
+    "        return X[self.attribute_names].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "ba5c7b6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomLabelBinarizer(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, sparse_output=False):\n",
+    "        self.sparse_output = sparse_output\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    def transform(self, X, y=None):\n",
+    "        enc = LabelBinarizer(sparse_output=self.sparse_output)\n",
+    "        return enc.fit_transform(X)\n",
+    "\n",
+    "from sklearn.pipeline import FeatureUnion\n",
+    "\n",
+    "num_attribs = list(numerical_atts)\n",
+    "cat_attribs = [\"ocean_proximity\"]\n",
+    "num_pipeline = Pipeline([\n",
+    " ('selector', DataFrameSelector(num_attribs)),\n",
+    " ('imputer', SimpleImputer(strategy=\"median\")),\n",
+    " ('attribs_adder', CombinedAttributesAdder()),\n",
+    " ('std_scaler', StandardScaler()),\n",
+    " ])\n",
+    "cat_pipeline = Pipeline([\n",
+    " ('selector', DataFrameSelector(cat_attribs)),\n",
+    " ('label_binarizer', CustomLabelBinarizer()),\n",
+    " ])\n",
+    "full_pipeline = FeatureUnion(transformer_list=[\n",
+    " (\"num_pipeline\", num_pipeline),\n",
+    " (\"cat_pipeline\", cat_pipeline),\n",
+    " ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "91cbd897",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_prepared = full_pipeline.fit_transform(housing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ec0b249a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.32783522,  1.05254828,  0.98214266, ...,  0.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       [-1.32284391,  1.04318455, -0.60701891, ...,  0.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       [-1.33282653,  1.03850269,  1.85618152, ...,  0.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       ...,\n",
+       "       [-0.8237132 ,  1.77823747, -0.92485123, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-0.87362627,  1.77823747, -0.84539315, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-0.83369581,  1.75014627, -1.00430931, ...,  0.        ,\n",
+       "         0.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_prepared"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "322a3dd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20640, 21)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_prepared.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "72701028",
+   "id": "00cf10fc",
    "metadata": {},
    "outputs": [],
    "source": []
